--- a/bastion/bastion-service.yaml
+++ b/bastion/bastion-service.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -81,8 +80,8 @@ spec:
           name: bastion
           subPath: var/log/
       - env:
-        - name: INTEGRATE_SSH
-          value: "true"
+        # - name: INTEGRATE_SSH
+        #   value: "true"
         - name: GIN_MODE
           value: release
         - name: LINUX_USER_ADD_TPL
@@ -140,7 +139,7 @@ spec:
       - command:
         - /bin/sh
         - -c
-        - (cp -a /etc/ /mnt/etc/) && (mkdir -p /mnt/home /mnt/root /mnt/var/log)
+        - (cp -a /etc /mnt/etc) && (mkdir -p /mnt/home /mnt/root /mnt/var/log) && (sed -i 's/AuthenticationMethods publickey,keyboard-interactive/AuthenticationMethods publickey/g' /mnt/etc/ssh/sshd_config) && (sed -i 's/AllowTcpForwarding no/AllowTcpForwarding yes/g' /mnt/etc/ssh/sshd_config)
         image: cloudposse/bastion:latest
         imagePullPolicy: Always
         name: init
