--- a/cert-manager/certificate-issuer.yaml
+++ b/cert-manager/certificate-issuer.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-prod
-  namespace: production
+  name: letsencrypt
+  namespace: cert-manager
 spec:
   acme:
     email: contact@redcraft.org
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
-      name: letsencrypt-prod
+      name: letsencrypt-keys
     solvers:
     - http01:
         ingress:
@@ -18,7 +18,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echoserver
-  namespace: production
+  namespace: cert-manager
 spec:
   replicas: 2
   selector:
@@ -47,7 +47,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echoserver
-  namespace: production
+  namespace: cert-manager
 spec:
   ports:
   - port: 80
