--- a/mariadb/mariadb-pv.yaml
+++ b/mariadb/mariadb-pv.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: bastion-pvc
-  namespace: bastion
+  name: mariadb-pvc
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Gi
   storageClassName: scw-bssd
