--- a/mariadb/mariadb-service.yaml
+++ b/mariadb/mariadb-service.yaml
@@ -1,48 +1,46 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mariadb-prod
-  namespace: production
+  name: mariadb
 spec:
   ports:
   - port: 3306
   selector:
-    app: mariadb-prod
+    app: mariadb
   clusterIP: ""
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mariadb-prod
-  namespace: production
+  name: mariadb
 spec:
   selector:
     matchLabels:
-      app: mariadb-prod
+      app: mariadb
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mariadb-prod
+        app: mariadb
     spec:
-      hostname: mariadb-prod
+      hostname: mariadb
       containers:
       - image: mariadb:10
-        name: mariadb-prod
+        name: mariadb
         env:
         - name: MARIADB_ROOT_HOST
           value: '%'
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mariadb-prod
+              name: mariadb
               key: password
         ports:
         - containerPort: 3306
-          name: mariadb-prod
+          name: mariadb
         volumeMounts:
-        - name: mariadb-prod-persistent-storage
+        - name: mariadb-persistent-storage
           mountPath: /var/lib/mysql
         resources:
           requests:
@@ -52,6 +50,6 @@ spec:
             memory: "1Gi"
             cpu: "500m"
       volumes:
-      - name: mariadb-prod-persistent-storage
+      - name: mariadb-persistent-storage
         persistentVolumeClaim:
-          claimName: mariadb-pvc-prod
+          claimName: mariadb-pvc
