--- a/mongodb/mongodb-service.yaml
+++ b/mongodb/mongodb-service.yaml
@@ -1,40 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb-prod
-  namespace: production
+  name: mongodb
 spec:
   ports:
   - port: 27017
   selector:
-    app: mongodb-prod
+    app: mongodb
   clusterIP: ""
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb-prod
-  namespace: production
+  name: mongodb
 spec:
   selector:
     matchLabels:
-      app: mongodb-prod
+      app: mongodb
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mongodb-prod
+        app: mongodb
     spec:
-      hostname: mongodb-prod
+      hostname: mongodb
       containers:
       - image: mongo:5
-        name: mongodb-prod
+        name: mongodb
         ports:
         - containerPort: 27017
-          name: mongodb-prod
+          name: mongodb
         volumeMounts:
-        - name: mongodb-prod-persistent-storage
+        - name: mongodb-persistent-storage
           mountPath: /data/db
         resources:
           requests:
@@ -44,6 +42,6 @@ spec:
             memory: "1Gi"
             cpu: "500m"
       volumes:
-      - name: mongodb-prod-persistent-storage
+      - name: mongodb-persistent-storage
         persistentVolumeClaim:
-          claimName: mongodb-pvc-prod
+          claimName: mongodb-pvc
