--- a/redis/redis-service.yaml
+++ b/redis/redis-service.yaml
@@ -1,38 +1,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-prod
-  namespace: production
+  name: redis
 spec:
   ports:
   - port: 6379
   selector:
-    app: redis-prod
+    app: redis
   clusterIP: ""
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-prod
-  namespace: production
+  name: redis
 spec:
   selector:
     matchLabels:
-      app: redis-prod
+      app: redis
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: redis-prod
+        app: redis
     spec:
-      hostname: redis-prod
+      hostname: redis
       containers:
       - image: redis:6
-        name: redis-prod
+        name: redis
         ports:
         - containerPort: 6379
-          name: redis-prod
+          name: redis
         resources:
           requests:
             memory: "256Mi"
