--- a/cert-manager/certificate-issuer.yaml
+++ b/cert-manager/certificate-issuer.yaml
@@ -37,11 +37,11 @@ spec:
         - containerPort: 8080
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
+            memory: 256Mi
+            cpu: 250m
           limits:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: 1Gi
+            cpu: 500m
 ---
 apiVersion: v1
 kind: Service
