--- a/mariadb/mariadb-service.yaml
+++ b/mariadb/mariadb-service.yaml
@@ -44,11 +44,11 @@ spec:
           mountPath: /var/lib/mysql
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
+            memory: 256Mi
+            cpu: 0.5
           limits:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: 1Gi
+            cpu: 1
       volumes:
       - name: mariadb-persistent-storage
         persistentVolumeClaim:
