--- a/redis/redis-service.yaml
+++ b/redis/redis-service.yaml
@@ -33,8 +33,8 @@ spec:
           name: redis
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
+            memory: 256Mi
+            cpu: 0.5
           limits:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: 1Gi
+            cpu: 1
