--- a/mariadb/mariadb-service.yaml
+++ b/mariadb/mariadb-service.yaml
@@ -45,10 +45,10 @@ spec:
         resources:
           requests:
             memory: 256Mi
-            cpu: 0.5
+            cpu: 500m
           limits:
             memory: 1Gi
-            cpu: 1
+            cpu: 1000m
       volumes:
       - name: mariadb-persistent-storage
         persistentVolumeClaim:
