--- a/mongodb/mongodb-service.yaml
+++ b/mongodb/mongodb-service.yaml
@@ -37,10 +37,10 @@ spec:
         resources:
           requests:
             memory: 256Mi
-            cpu: 0.5
+            cpu: 500m
           limits:
             memory: 1Gi
-            cpu: 1
+            cpu: 1000m
       volumes:
       - name: mongodb-persistent-storage
         persistentVolumeClaim:
