--- a/redis/redis-service.yaml
+++ b/redis/redis-service.yaml
@@ -34,7 +34,7 @@ spec:
         resources:
           requests:
             memory: 256Mi
-            cpu: 0.5
+            cpu: 500m
           limits:
             memory: 1Gi
-            cpu: 1
+            cpu: 1000m
