--- a/wireguard/wireguard-service.yaml
+++ b/wireguard/wireguard-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   labels:
     k8s-app: wireguard
-  name: wireguard-service
+  name: wireguard
   namespace: wireguard
 spec:
   type: NodePort
