--- a/wireguard/wireguard-service.yaml
+++ b/wireguard/wireguard-service.yaml
@@ -8,13 +8,12 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 51820
-    nodePort: 31820
-    protocol: UDP
-    targetPort: 51820
+    - port: 51820
+      nodePort: 31820
+      protocol: UDP
+      targetPort: 51820
   selector:
     app: wireguard
-
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -31,46 +30,55 @@ data:
   ALLOWEDIPS: "0.0.0.0/0, ::/0"
   INTERNAL_SUBNET: "10.13.13.0"
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: wireguard
   namespace: wireguard
-  labels:
-    app: wireguard
+  name: wireguard
 spec:
-  containers:
-  - name: wireguard
-    image: ghcr.io/linuxserver/wireguard
-    envFrom:
-    - configMapRef:
-        name: wireguard-configmap
-    securityContext:
-      capabilities:
-        add:
-          - NET_ADMIN
-          - SYS_MODULE
-      privileged: true
-    volumeMounts:
-      - name: wg-config
-        mountPath: /config
-      - name: host-volumes
-        mountPath: /lib/modules
-    ports:
-    - containerPort: 51820
-      protocol: UDP
-    resources:
-      requests:
-        memory: 64Mi
-        cpu: 100m
-      limits:
-        memory: 128Mi
-        cpu: 200m
-  volumes:
-    - name: wg-config
-      persistentVolumeClaim:
-        claimName: wireguard-pvc
-    - name: host-volumes
-      hostPath:
-        path: /lib/modules
-        type: Directory
+  selector:
+    matchLabels:
+      app: wireguard
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: wireguard
+    spec:
+      hostname: wireguard
+      containers:
+        - name: wireguard
+          image: ghcr.io/linuxserver/wireguard
+          envFrom:
+            - configMapRef:
+                name: wireguard-configmap
+          securityContext:
+            capabilities:
+              add:
+                - NET_ADMIN
+                - SYS_MODULE
+            privileged: true
+          volumeMounts:
+            - name: wg-config
+              mountPath: /config
+            - name: host-volumes
+              mountPath: /lib/modules
+          ports:
+            - containerPort: 51820
+              protocol: UDP
+          resources:
+            requests:
+              memory: 64Mi
+              cpu: 100m
+            limits:
+              memory: 128Mi
+              cpu: 200m
+      volumes:
+        - name: wg-config
+          persistentVolumeClaim:
+            claimName: wireguard-pvc
+        - name: host-volumes
+          hostPath:
+            path: /lib/modules
+            type: Directory
